fix: make nav always visible

--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -673,6 +673,10 @@ video {
   z-index: -50;
 }
 
+.z-50{
+  z-index: 50;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -787,6 +791,20 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-bg{
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 60 84 / var(--tw-bg-opacity));
+}
+
+.\!bg-bg{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(47 60 84 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-transparent{
+  background-color: transparent;
+}
+
 .p-5{
   padding: 1.25rem;
 }
@@ -804,6 +822,11 @@ video {
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-40{
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .pb-10{
@@ -824,6 +847,10 @@ video {
 
 .pt-40{
   padding-top: 10rem;
+}
+
+.pb-32{
+  padding-bottom: 8rem;
 }
 
 .text-center{
@@ -878,6 +905,10 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.ease-out{
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 @keyframes box-pulse {
